--- a/index.html
+++ b/index.html
@@ -7,39 +7,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
-  <body class="container">
-    <nav class="navbar bg-body-secondary rounded mb-4">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<body class="container">
+    <nav class="navbar fixed-top bg-body-secondary rounded mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Link A</a>
-            <a class="navbar-brand" href="#">Link B</a>
-            <a class="navbar-brand" href="#">Link C</a>
-            <a class="navbar-brand" href="#">Link D</a>
+            <a class="navbar-brand" href="#">DataSet Analysis</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#Dataset_Overview">Dataset Overview</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Dataset_Cleaning_Summary">Dataset Cleaning Summary</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Descriptive_Statistics_Explanation">Descriptive Statistics Explanation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Visual_Analysis_With_Graphs">Visual Analysis with Graphs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Basic_Machine_Learning">Basic Machine Learning</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Limitations_And_Ethics">Limitations and Ethics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Conclusion">Conclusion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Links">Links</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <main>
-        <header class="mb-4">
-            <h1 class="display-1">Dataset Analysis</h1>
-            <p>Temporary</p>
-        </header>
-        <section class="section-styling">
+        <section class="section-styling"id="Dataset_Overview">
             <h1 class="display-1">Dataset Overview</h1>
             <p>
                 The dataset focuses on summarizing network traffic data across 10 workstations whose IP’s have been coded as 0-9, across a three-month period, from 2006-07-01 to 2006-09-30. It contains 21K rows, with 4 columns: Date, L-ipn (the local IP address), r_asn (The remote asn), f:flows (count of connections for that day) The purpose was to track odd activity on each IP to determine whether the IP was compromised. 
             </p>
             <section></section>
 
-        <section class="section-styling">
+        <section class="section-styling"id="Dataset_Cleaning_Summary">
             <h1 class="display-1">Dataset Cleaning Summary</h1>
             <p>Temporary</p>
         </section>
 
         <section class="section-styling">
-            <h1 class="display-1">Descriptive Statistics Explanation</h1>
+            <h1 class="display-1" id="Descriptive_Statistics_Explanation">Descriptive Statistics Explanation</h1>
             <p>Temporary</p>
         </section>
 
-        <section class="section-styling">
-            <h1 class="display-1">Charts</h1>
+        <section class="section-styling" id="Visual_Analysis_With_Graphs">
+            <h1 class="display-1">Visual Analysis with Graphs</h1>
             <div class="spacing">
                 <p>The graph below shows the total connections to each IP across the entire period. This graph shows that each IP had a near equal number of connections, with the exception of IP ‘4’ which had way more connections than the rest, potentially showing that it has been turned into part of a botnet. </p>
                 <canvas id="main-chart"></canvas>
@@ -66,22 +94,95 @@
             </div>
         </section>
 
-        <section class="section-styling">
+        <section class="section-styling" id="Basic_Machine_Learning">
             <h1 class="display-1">Basic Machine Learning</h1>
-            <p>Temporary</p>
-        </section>
+            <p>For the machine learning component of this project, a Linear Regression model was implemented to analyse the relationship between local IP numbers and network traffic flows.</p> 
 
-        <section class="section-styling">
+            <p>Linear regression is a supervised learning algorithm used to predict a numerical value by fitting a straight line to observed data. In this case:</p> 
+            <ul>
+                <li>The independent variable (X) is the local IP number (l_ipn) </li>
+                <li>The dependent variable (Y) is the number of network flows (f) </li>
+            </ul>
+            <p>The dataset was loaded using the Pandas library in Python. The model was implemented using the LinearRegression class from the Scikit-learn library. The model was trained using the .fit() method, which determines the best-fitting line using the least squares approach. </p>
+<br>
+<h2>Implementation</h2>     
+<p>The core part of the implementation is shown below:</p> 
+<code>
+    X = df[["l_ipn"]] 
+    y = df["f"] 
+ 
+    model = LinearRegression() 
+    model.fit(X, y) 
+</code>
+
+<p>After training the model, predictions were generated and visualised using Matplotlib. </p>
+
+<h2>Results:</h2>
+<p>The regression model produced the following equation: </p>
+<p>Flows = -3.13 × l_ipn + 107.16 </p>
+<p>Figure shows the regression line plotted against the actual dataset values. </p>
+<img src="Img/Figure1.png" alt="Figure 1">
+<p class="bolder">Figure : Linear Regression showing the relationship between Local IP Number and Network Flows </p>
+<h2>Interpretation of Results </h2>
+<p>From Figure 1, it is clear that most IP addresses generate very low numbers of flows, as seen by the cluster of points near zero on the graph. </p>
+<p>However, two IP addresses generate extremely high traffic values (reaching several hundred thousand connections in a single day). These values act as strong outliers in the dataset. </p>
+<p>Due to the presence of these extreme values, the regression line appears nearly flat. This indicates that there is no strong linear relationship between the IP number and the number of flows across the dataset as a whole. Instead, the data is heavily influenced by a small number of unusually large traffic values. </p>
+<p>The slope of the regression equation (-3.13) is relatively small compared to the scale of the outliers, further supporting the conclusion that IP number alone does not strongly predict network flow volume. </p>
+<h2>Relevance to Cybersecurity </h2>
+<p>In a cybersecurity context, extreme deviations from normal traffic patterns may indicate unusual or suspicious activity. The very large flow values observed for certain IP addresses could represent abnormal network behaviour, potential system misconfiguration, or possible malicious activity. </p>
+<p class="bolder">Code for Regression Algorithm</p>
+<code>
+ # Very Basic Linear Regression + Logistic Regression 
+# Dataset: cs448b_ipasn.csv 
+import pandas as pd 
+import numpy as np 
+import matplotlib.pyplot as plt 
+from sklearn.linear_model import LinearRegression 
+
+# 1) Load the data 
+
+df= pd.read_csv("cs448b_ipasn.csv") 
+df.columns = df.columns.str.strip() 
+
+# define input x and output y 
+
+X = df[["l_ipn"]] 
+y = df["f"] 
+
+#create and train model 
+model=LinearRegression() 
+model.fit(X,y) 
+
+# Smooth line 
+x_line = np.linspace(X["l_ipn"].min(), X["l_ipn"].max(), 100).reshape(-1, 1) 
+y_line = model.predict(x_line) 
+
+#results 
+plt.figure() 
+plt.scatter(X["l_ipn"] , y) 
+plt.plot(x_line, y_line) 
+plt.Xlabel("local IP Number") 
+plt.ylabel("number of flows") 
+plt.title("linear regression: IP vs Network Flowa") 
+plt.show() 
+
+#print regression equation 
+print("LINEAR REGRESSION EQUATION:") 
+print(f"Flows = {model.coef_[0]:.2f} * l_ipn + {model.intercept_:.2f}") 
+</code>
+</section>
+
+        <section class="section-styling" id="Limitations_And_Ethics">
             <h1 class="display-1">Limitations and Ethics</h1>
             <p>Temporary</p>
         </section>
 
-        <section class="section-styling">
+        <section class="section-styling" id="Conclusion">
             <h1 class="display-1">Conclusion</h1>
             <p>Temporary</p>
         </section>
 
-        <section class="section-styling">
+        <section class="section-styling" id="Links">
             <h1 class="display-1">Links</h1>
             <ul>
                 <li>
@@ -95,13 +196,6 @@
                 </li>
             </ul>
         </section>
-
-        </section>
-        <article>
-            <h2>Placeholder 2</h2>
-            <p></p>
-            <pre></pre>
-        </article>
     </main>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
