--- a/index.html
+++ b/index.html
@@ -179,8 +179,51 @@ print(f"Flows = {model.coef_[0]:.2f} * l_ipn + {model.intercept_:.2f}")
 
         <section class="section-styling" id="Conclusion">
             <h1 class="display-1">Conclusion</h1>
-            <p>Temporary</p>
-        </section>
+            <p>This project analyzes network traffic data collected from 10 workstations (coded 0-9) over a three-month period -
+                July 1st -September 30th, 2006.</p>
+            <h2>Objective </h2>
+            <p>The primary goal of this project was to detect unusual or suspicious activity patterns across machines and determine
+                whether any workstation may have been compromised. </p>
+            <h2>Dataset Cleaning and Preparation </h2>
+            <p>Before analysis, the dataset was prepared by: </p>
+            <ul>
+                <li>Removing formatting inconsistencies in column names </li>
+                <li> Verifying date formatting and chronological ordering </li>
+                <li> Checking for missing or zero value anomalies </li>
+                <li>Ensuring numeric consistency in flow counts </li>
+            </ul>
+            <p>This ensured reliable statistical analysis and machine learning modeling </p>
+            <h2>Visual Analysis </h2>
+            <p>Across the full 3-month period: </p>
+            <ul>
+                <li>Most IP addresses received relatively equal traffic volumes </li>
+                <li>IP '4' showed significantly higher total connections </li>
+                <li>This deviation strongly suggests abnormal behavior </li>
+            </ul>
+            <h2>Machine Learning Analysis </h2>
+            <p>A linear Regression model was implemented to evaluate whether IP number predicts traffic volume: </p>
+            <p> Flows = -3.13 × l_ipn + 107.16 </p>
+            <ul>
+                <li>Most IPs generate low traffic volumes, except a few extreme outliers</li>
+                <li>The slope is small, showing that IP number alone does not predict traffic volume</li>
+                <li>Outliers like IP ‘4’ dominate the dataset, highlighting anomalous behavior</li>
+            </ul>
+            <h2>Cybersecurity Implications </h2>
+            <p>High traffic spikes may indicate botnets or automated attacks, while periods of zero traffic may signal shutdown. </p>
+            <p>Behavioral deviations are often more critical than overall traffic averages </p>   
+            <p>Visual analytics combined with machine learning enhances detection of unusual network activity </p>   
+            <h2>Limitations and Future Work </h2> 
+            <p>Linear regression is sensitive to extreme values and IP number is not a strong predictor of flow volumes </p>
+            <p>Future improvements could include: </p>
+            <ul>
+                <li>Time series anomaly detection </li>
+                <li>Clustering or Isolation Forest models </li>
+                <li>Classification models to flag potentially compromised machines</li>
+            </ul>
+            <h2>Conclusion </h2>
+            <p>This analysis successfully identified network anomalies and highlighted the importance of monitoring traffic deviations </p>
+            <p>The most notable finding was the extreme spike on IP 4, suggesting botnet participation, while other IPs showed shutdown periods a practical approach to detecting unusual or suspicious network activity in cybersecurity contexts </p>
+         </section>
 
         <section class="section-styling" id="Links">
             <h1 class="display-1">Links</h1>
